<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:orientation="vertical"
                android:outlineProvider="bounds">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_margin_left"
                    android:layout_marginRight="@dimen/login_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_button_sign_up" />

                    <TextView
                        style="@style/styleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edEmail"
                            style="@style/styleEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="@dimen/width_icon_text_login"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_marginRight="@dimen/icon_email_margin_right"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_email_black_24dp" />
                    </FrameLayout>

                    <TextView
                        style="@style/styleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edPassword"
                            style="@style/styleEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                        <ImageView
                            android:layout_width="@dimen/width_icon_text_login"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_marginRight="@dimen/icon_email_margin_right"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_password" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_button_sign_up" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button_sign_up"
                android:visibility="invisible" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_sign_up"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="@dimen/login_margin_left_button"
            android:layout_marginRight="@dimen/login_margin_left_button"
            android:background="@color/colorSignUp">

            <FrameLayout
                android:id="@+id/frSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    style="@style/styleTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up" />
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>

</RelativeLayout>
