<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivJewels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxHeight="300dp"
                        android:maxWidth="300dp"
                        android:minHeight="180dp"
                        android:minWidth="180dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_button_sign_up" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button_sign_up"
                android:visibility="invisible" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frRequestFail"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/height_button_sign_up"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="@dimen/login_margin_left_button"
            android:layout_marginRight="@dimen/login_margin_left_button"
            android:background="@color/colorSignUp">

            <FrameLayout
                android:id="@+id/frScanAgain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    style="@style/styleTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scan_again" />
            </FrameLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/frRequestSuccess"
            android:layout_height="@dimen/height_button_sign_up"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="@dimen/login_margin_left_button"
            android:layout_marginRight="@dimen/login_margin_left_button"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSignUp">

                <FrameLayout
                    android:id="@+id/frSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        style="@style/styleTextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/confirm" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorChangId">

                <FrameLayout
                    android:id="@+id/frChangId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        style="@style/styleTextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/change_id" />
                </FrameLayout>
            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
